hphp/test/slow/parser/php-reserved-name-bool-1.php.expectf
Fatal error: Cannot use 'Bool' as class name as it is reserved in %s/php-reserved-name-bool-1.php on line 6